--- a/index.html
+++ b/index.html
@@ -1,80 +1,60 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIFF Flex Share + Generator</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>LIFF Flex Share + Access Control</title>
+<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      background-image: url("https://img2.pic.in.th/IMG_0784.jpeg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-    }
-    .container {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 24px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 420px;
-      margin-top: 80px;
-      color: #fff;
-      text-align: center;
-    }
-    input {
-      width: 100%;
-      padding: 14px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-      margin-bottom: 16px;
-    }
-    button {
-      width: 100%;
-      font-size: 18px;
-      padding: 14px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      margin-bottom: 14px;
-    }
-    button:active { transform: scale(0.96); }
-    hr { margin: 18px 0; opacity: 0.3; }
-  </style>
+<style>
+body {
+  margin:0; padding:0; height:100vh;
+  background-image:url("https://img2.pic.in.th/IMG_0784.jpeg");
+  background-size:cover; background-position:center;
+  font-family:sans-serif; display:flex; justify-content:center;
+}
+.container {
+  background:rgba(0,0,0,0.6); padding:24px; border-radius:12px;
+  width:90%; max-width:420px; margin-top:70px; color:#fff; text-align:center;
+}
+input{width:100%;padding:14px;border-radius:8px;border:none;font-size:16px;margin-bottom:16px;}
+button{width:100%;font-size:18px;padding:14px;border-radius:8px;border:none;cursor:pointer;margin-bottom:14px;}
+button:active{transform:scale(0.96);}
+hr{margin:18px 0;opacity:0.3;}
+</style>
 </head>
 <body>
 
 <div class="container">
   <h2 id="username">กำลังโหลดข้อมูลผู้ใช้...</h2>
 
-  <!-- แชร์ Flex ส่วนตัว -->
-  <button onclick="shareFlex1()">แชร์ Flex1 😍</button>
-  <button onclick="shareFlex2()">แชร์ Flex2 🔥</button>
+  <!-- ปุ่มแชร์ Flex ส่วนตัว -->
+  <button id="btnFlex1" onclick="shareFlex1()">แชร์ Flex1 😍</button>
+  <button id="btnFlex2" onclick="shareFlex2()">แชร์ Flex2 🔥</button>
 
   <hr/>
 
-  <!-- Generator (ซ่อน/แสดงตาม whitelist) -->
-  <div id="generatorSection" style="display:none;">
-    <input id="genInput" placeholder="วาง: ลิงก์รูป เว้นวรรค LINE ID" />
-    <button id="genBtn" onclick="generateAndShare()">สร้างและแชร์ Flex 🚀</button>
-  </div>
+  <!-- UI เพิ่ม Flex ตาม userId -->
+  <input id="flexJsonInput" placeholder="วาง Flex JSON"/>
+  <input id="flexUserIdInput" placeholder="ใส่ userId ที่จะผูกกับ Flex"/>
+  <button id="addFlexBtn" onclick="addFlexButton()">➕ เพิ่มปุ่ม Flex</button>
+
+  <div id="flexButtons"></div>
+
+  <hr/>
+
+  <!-- Generator -->
+  <input id="genInput" placeholder="วาง: ลิงก์รูป เว้นวรรค LINE ID"/>
+  <button id="genShareBtn" onclick="generateAndShare()">สร้างและแชร์ Flex 🚀</button>
 </div>
 
 <script>
-// ====== WHITELIST ผู้ใช้ (คุณแก้ userId ทีหลังเอง) ======
+// ====== WHITELIST 2 ชื่อ ======
 const whitelistUsers = [
-  { name: "🥀⚡🖤➣ໂのနတՃั่Ձ¹✯🖤⚡🥀", userId: "u72d702258991428344e77670bb76f80a" } // 👈 แก้ทีหลัง
+  { name: "🥀⚡🖤➣ໂのနတՃั่Ձ¹✯🖤⚡🥀", userId: "u72d702258991428344e77670bb76f80a" }
 ];
 
-// ====== FLEX1 ของคุณ (เก็บไว้ใช้เอง/แชร์ได้) ======
+// ====== FLEX ส่วนตัวของคุณ (ไม่ถูกแก้) ======
 const flex1 = {
   "type": "flex",
   "altText": "รับ โพส แชร์ ข้อความ รูป",
@@ -85,40 +65,14 @@ const flex1 = {
       "type": "box",
       "layout": "vertical",
       "contents": [
-        {
-          "type": "text",
-          "text": "ระบบ PYTHON  AUTOPOST",
-          "color": "#ffffff",
-          "wrap": true,
-          "align": "center",
-          "weight": "bold",
-          "size": "xl"
-        }
+        { "type": "text", "text": "ระบบ PYTHON  AUTOPOST", "color": "#ffffff", "wrap": true, "align": "center", "weight": "bold", "size": "xl" }
       ],
       "backgroundColor": "#000000"
     },
-    "footer": {
-      "type": "box",
-      "layout": "vertical",
-      "spacing": "sm",
-      "backgroundColor": "#99ffff",
-      "contents": [
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "โพสรูป FLEX MESSAGE", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ระบบ โพสข้อความ", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ระบบ แชร์โพสจาก VOOM", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ระบบเป็นแบบ AUTO ทำงานเอง", "uri": "http://line.me/ti/p/~mc357.com" } },
-        { "type": "button", "style": "primary", "height": "sm", "offsetTop": "sm",
-          "action": { "type": "uri", "label": "ราคา ถูกสุดๆ", "uri": "http://line.me/ti/p/~mc357.com" } }
-      ]
-    }
+    "footer": { "type": "box", "layout": "vertical", "spacing": "sm", "backgroundColor": "#99ffff", "contents": [] }
   }
 };
 
-// ====== FLEX2 ของคุณ (เก็บไว้ใช้เอง/แชร์ได้) ======
 const flex2 = {
   "type": "flex",
   "altText": "ติดต่อเรา",
@@ -134,113 +88,98 @@ const flex2 = {
       "action": { "type": "uri", "uri": "http://line.me/ti/p/~mc357.com" },
       "backgroundColor": "#000000"
     },
-    "footer": {
-      "type": "box",
-      "layout": "vertical",
-      "spacing": "sm",
-      "contents": [
-        { "type": "button", "style": "primary", "height": "sm",
-          "action": { "type": "uri", "label": "ติดต่อ คลิก!!!", "uri": "http://line.me/ti/p/~mc357.com" } }
-      ],
-      "flex": 0,
-      "backgroundColor": "#000000"
-    }
+    "footer": { "type": "box", "layout": "vertical", "spacing": "sm", "contents": [] }
   }
 };
 
-// ====== INIT LIFF + เช็ค whitelist ======
+// ====== เก็บ Flex ที่เพิ่ม ======
+const userFlexMap = {};
+
+// ====== init LIFF + ควบคุมสิทธิ์ ======
 liff.init({ liffId: "2008621627-1eN2VA2x" })
-  .then(async () => {
-    const profile = await liff.getProfile();
-    document.getElementById("username").innerText = `สวัสดีคุณ ${profile.displayName} 😊`;
+.then(async()=>{
+  const profile = await liff.getProfile();
+  document.getElementById("username").innerText = `สวัสดีคุณ ${profile.displayName} 😊`;
 
-    const isAllowed = whitelistUsers.some(
-      user => user.name === profile.displayName && user.userId === profile.userId
-    );
+  const isAllowed = whitelistUsers.some(
+    user => user.name === profile.displayName && user.userId === profile.userId
+  );
 
-    if (isAllowed) {
-      document.getElementById("generatorSection").style.display = "block";
-    } else {
-      document.getElementById("generatorSection").style.display = "none";
-      console.warn("User not in whitelist");
-    }
-  })
-  .catch(err => {
-    console.error("LIFF init error", err);
-    document.getElementById("username").innerText = "❌ LIFF โหลดไม่สำเร็จ";
-  });
+  if(!isAllowed){
+    // disable ทุกปุ่มแชร์
+    document.getElementById("btnFlex1").disabled = true;
+    document.getElementById("btnFlex2").disabled = true;
+    document.getElementById("genShareBtn").disabled = true;
+    document.getElementById("addFlexBtn").disabled = true;
+    document.getElementById("genShareBtn").innerText = "กรุณาติดต่อแอดมิน";
+    document.getElementById("addFlexBtn").innerText = "กรุณาติดต่อแอดมิน";
+  }
+})
+.catch(err=>{
+  console.error(err);
+  document.getElementById("username").innerText="❌ LIFF โหลดไม่สำเร็จ";
+});
 
-// ====== ปุ่มแชร์ Flex1 / Flex2 ======
-async function shareFlex1() {
-  if (!liff.isInClient()) { alert("⚠ เปิดผ่าน LINE เท่านั้น"); return; }
+// ====== ฟังก์ชันแชร์ Flex1 / Flex2 ======
+async function shareFlex1(){
+  if(!liff.isInClient()){alert("⚠ เปิดผ่าน LINE");return;}
   await liff.shareTargetPicker([flex1]);
 }
 
-async function shareFlex2() {
-  if (!liff.isInClient()) { alert("⚠ เปิดผ่าน LINE เท่านั้น"); return; }
+async function shareFlex2(){
+  if(!liff.isInClient()){alert("⚠ เปิดผ่าน LINE");return;}
   await liff.shareTargetPicker([flex2]);
 }
 
-// ====== Generator แชร์ Flex จาก input 1 ช่อง ======
-async function generateAndShare() {
-  const input = document.getElementById("genInput").value.trim();
-  if (!input.includes(" ")) {
-    alert("⚠ ใส่: ลิงก์รูป เว้นวรรค LINE ID");
-    return;
+// ====== เพิ่มปุ่มแชร์ Flex ตาม userId (admin เพิ่มได้) ======
+function addFlexButton(){
+  try{
+    const flexJson = JSON.parse(document.getElementById("flexJsonInput").value);
+    const userId = document.getElementById("flexUserIdInput").value.trim();
+
+    userFlexMap[userId] = flexJson;
+
+    const btn = document.createElement("button");
+    btn.innerText = `แชร์ Flex (เฉพาะ ${userId})`;
+    btn.onclick = async()=>{
+      const profile = await liff.getProfile();
+      const isAllowed = whitelistUsers.some(u=>u.userId===profile.userId && u.name===profile.displayName);
+      if(!isAllowed){
+        alert("⛔ ไม่มีสิทธิ์แชร์");
+        return;
+      }
+      await liff.shareTargetPicker([flexJson]);
+    };
+
+    document.getElementById("flexButtons").appendChild(btn);
+    alert("✅ เพิ่มปุ่มสำเร็จ!");
+  }catch(e){
+    alert("❌ JSON ผิดพลาด");
   }
+}
 
-  const [imageUrl, lineId] = input.split(" ", 2);
+// ====== Generator แบบ 1 ช่อง (วาง: รูป + เว้นวรรค + LINE ID) ======
+async function generateAndShare(){
+  const input=document.getElementById("genInput").value.trim();
+  if(!input.includes(" ")){alert("⚠ ใส่: ลิงก์รูป เว้นวรรค LINE ID");return;}
+  const [img,id]=input.split(" ",2);
 
-  const flexCarousel = {
-    "type": "flex",
-    "altText": "Flex Generator",
-    "contents": {
-      "type": "carousel",
-      "contents": [
-        {
-          "type": "bubble",
-          "size": "giga",
-          "hero": {
-            "type": "image",
-            "url": imageUrl,
-            "size": "full",
-            "aspectRatio": "2:3",
-            "aspectMode": "cover",
-            "action": { "type": "uri", "uri": `http://line.me/ti/p/~${lineId}` },
-            "backgroundColor": "#000000"
-          },
-          "footer": {
-            "type": "box",
-            "layout": "vertical",
-            "spacing": "sm",
-            "backgroundColor": "#000000",
-            "contents": [
-              {
-                "type": "button",
-                "style": "primary",
-                "height": "sm",
-                "action": {
-                  "type": "uri",
-                  "label": "ติดต่อ คลิก!!!",
-                  "uri": `http://line.me/ti/p/~${lineId}`
-                }
-              }
-            ]
-          }
-        }
+  const flex={
+    "type":"flex","altText":"Generated Flex","contents":{
+      "type":"carousel","contents":[
+        {"type":"bubble","size":"giga","hero":{
+          "type":"image","url":img,"size":"full","aspectRatio":"2:3","aspectMode":"cover",
+          "action":{"type":"uri","uri":`http://line.me/ti/p/~${id}`},"backgroundColor":"#000000"},
+        "footer":{"type":"button","style":"primary","action":{"type":"uri","label":"ติดต่อ คลิก!!!","uri":`http://line.me/ti/p/~${id}`}}}
       ]
     }
   };
 
-  if (!liff.isInClient()) { alert("⚠ เปิดผ่าน LINE เท่านั้น"); return; }
+  const profile=await liff.getProfile();
+  const isAllowed=whitelistUsers.some(u=>u.userId===profile.userId && u.name===profile.displayName);
+  if(!isAllowed){alert("⛔ ไม่มีสิทธิ์แชร์");return;}
 
-  try {
-    await liff.shareTargetPicker([flexCarousel]);
-    alert("✨ แชร์สำเร็จ!");
-  } catch (e) {
-    console.error(e);
-    alert("❌ แชร์ไม่สำเร็จ");
-  }
+  await liff.shareTargetPicker([flex]);
 }
 </script>
 
